# vulnerability-db

./: .flake8  .gitignore  INTEGRATION.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: pythonapp.yml  pythonpublish.yml
contrib/: cpe_research.py  reporting.md
data/: CVE_JSON_5.0_schema.json  README.md
test/: QUERIES.md  test_db.py  test_npm.py  test_source.py  test_storage.py  test_utils.py
test/data/: ALAS2022-2022-207.json  ALSA-2022-8580.json  ALSA-2022:8580.json  CVE-2015-3192.json  CVE-2018-9840.json  CVE-2019-18625.json  CVE-2020-25638.json  CVE-2020-35448.json  CVE-2021-22890.json  CVE-2021-27434.json  CVE-2022-21824.json  CVE-2022-27400.json  CVE-2022-32081.json  CVE-2022-32091.json  CVE-2022-3219.json  CVE-2022-3567.json  CVE-2022-3715.json  CVE-2022-3821.json  CVE-2022-45406.json  CVE-2022-45418.json  CVE-2022-6083.json  CVE-2023-21500.json  CVE-2023-52426.json  CVE-2024-0057.json  CVE-2024-21312.json  CVE-2024-23771.json  CVE-2024-25450.json  CVE-2024-3801.json  DLA-981-1.json  GHSA-vc2p-r46x-m3vx.json  GHSA-xrjj-mj9h-534m.json  GO-2022-0251.json  GO-2022-0646.json  MAL-2024-1333.json  MAL-2024-1396.json  RLSA-2022-7730.json  RLSA-2022:7730.json  RUSTSEC-2024-0343.json  SUSE-SU-2022-4192-1.json  cve_data.json  (+19 more)
vdb/: cli.py
vdb/lib/: __init__.py  aqua.py  cna.py  config.py  cve.py  db.py  db6.py  gha.py  npm.py  nvd.py  orasclient.py  osv.py  search.py  storage.py  utils.py
vdb/lib/cve_model/: __init__.py  common.py  cvss_v2.py  cvss_v3.py  tagger.py
vulndb/: cli.py
vulndb/lib/: __init__.py  config.py  db.py  gha.py  npm.py  nvd.py  storage.py  utils.py
