[project]
name = "appthreat-vulnerability-db"
version = "5.4.1"
description = "AppThreat's vulnerability database and package search library with a built-in file based storage. OSV, CVE, GitHub, npm are the primary sources of vulnerabilities."
authors = [
    {name = "Team AppThreat", email = "cloud@appthreat.com"},
]
dependencies = [
    "httpx[http2]",
    "appdirs",
    "tabulate",
    "msgpack==1.0.5",
    "orjson",
    "semver>=3.0.0",
    "packageurl-python",
    "cvss",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/appthreat/vulnerability-db"

[project.scripts]
vdb = "vdb.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "bandit",
    "flake8",
    "pytest",
    "pytest-cov"
]

[tool.setuptools]
packages = ["test", "vdb", "vdb.lib"]

[tool.pytest.ini_options]
addopts="--verbose --cov-append --cov-report term --cov vdb"
