[project]
name = "appthreat-vulnerability-db"
version = "6.0.1"
description = "AppThreat's vulnerability database and package search library with a built-in sqlite based storage. OSV, CVE, GitHub, npm are the primary sources of vulnerabilities."
authors = [
    {name = "Team AppThreat", email = "cloud@appthreat.com"},
]
dependencies = [
    "httpx[http2]",
    "appdirs",
    "orjson",
    "semver>=3.0.0",
    "packageurl-python",
    "cvss",
    "pydantic[email]",
    "rich",
    "apsw>=3.45.2.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/appthreat/vulnerability-db"

[project.scripts]
vdb = "vdb.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "bandit",
    "flake8",
    "pylint",
    "pytest",
    "pytest-cov"
]
oras = ["oras"]
all = ["oras"]

[tool.setuptools]
packages = ["vdb", "vdb.lib", "vdb.lib.cve_model"]

[tool.pytest.ini_options]
addopts="--showlocals -v --cov-report=term-missing --no-cov-on-fail --cov vdb"

[tool.pylint]
disable = ["broad-exception-caught", "too-many-branches", "too-many-statements", "too-many-nested-blocks", "too-many-locals", "missing-function-docstring", "too-many-lines", "missing-module-docstring"]
ignore-paths = ["vdb/lib/cve_model/*"]
generated-member = ["orjson.loads", "orjson.dumps", "orjson.OPT_NAIVE_UTC"]
